# nikon_work

./: MCP検索性能評価テンプレート.xlsx  batch_search_benchmark.py  batch_upload_simple.py  exm.thmx  exm2.thmx  kb-mcp-ui-manual.pptx  kb-mcp-user-guide.pptx  kb-mcp使用方法.pptx  sequential_upload.py  各資料調査.md  手順メモ.md  手順メモ.txt  改造シート_exmPC.pptx  改造シート検索.pptx  検証.md
create_description/: create_summary.py  extract_info.py  organize_info.py  synthesize_info.py  synthesize_summary.py  機能解説作成_20260218.pptx
document_matrix/document-relevance-matrix/: .gitignore  LICENSE  QUICKSTART.md  README.md  create_cooccurrence_matrix.py  pyproject.toml  reorder_matrix.py  setup.ps1  setup.sh
document_matrix/document-relevance-matrix/document_relevance_matrix/: __init__.py  build_matrix.py  build_matrix_backup.py  create_report.py  extract_links.py  extract_links_backup.py  rebuild_links.py
document_matrix/document-relevance-matrix/examples/test_files/: 電源管理仕様_20230405.xlsx
document_matrix/document-relevance-matrix/examples/test_files/test1/: システム起動シーケンス_20230501.xlsx  セキュリティ仕様_20230520.xlsx  センサー制御仕様_20230401.xlsx
document_matrix/document-relevance-matrix/examples/test_files/test2/: 温度管理仕様_20230410.xlsx  通信プロトコル仕様_20230425.xlsx
kb-mcp-ui関連/: batch_search_benchmark.py  batch_upload_direct.py  search_documents.py  手順メモ.md
output_excels/: excel_100KB.xlsx  excel_1300KB.xlsx  excel_1400KB.xlsx  excel_300KB.xlsx  excel_400KB.xlsx  excel_500KB.xlsx  excel_700KB.xlsx
tools/: PROFILER_STEPS.md  profile_upload.py  upload_content.py  upload_eb_content.py
改造シート調査/: 各資料調査.md
(+35 files in other folders)
